# Source1

./: CMakeLists.txt  devSource1.cpp  makefile  resekostnad.cpp  resekostnad.h  testNClass.cpp
demo/: CMakeLists.txt  testNClass.cpp
lib/: CMakeLists.txt  resekostnad.cpp  resekostnad.h
